# fabric_example

./: README.md  pyproject.toml
aimsh_fabric_example/: __init__.py  extract_wisdom.md  extract_wisdom_from_youtube.md  summarize.md  summarize_youtube.md
